--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   google_fonts: ^6.3.1
   carousel_slider: ^5.1.1
   smooth_page_indicator: ^1.2.1
+  flutter_staggered_grid_view: ^0.7.0
+  flutter_rating_bar: ^4.0.1
+  provider: ^6.1.5+1
 
 dependency_overrides:
   characters: ^1.4.1
